--- a/main.html
+++ b/main.html
@@ -8,6 +8,39 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<nav>
+		<a href="#actor">Actors sections</a> |   
+		<a href="#quote">Quotes sections</a> 
+	</nav>
+
+	<header>
+		<h1>12th Fail</h1>
+	</header>
+	
+	<summary>Manoj prepares cheat slips for his Class 12 exams, as do all his batchmates. However, a newly transferred police officer, DSP Dushyant Singh, stops cheating in the school. As a result, all the students, including Manoj, fail the exam. Meanwhile, his father goes to challenge his suspension in the High Court.</summary>
+
+	<section id="actor">
+		<h2>About Actors</h2>
+		<p>The film stars Vikrant Massey in the lead role, alongside Medha Shankar, Anant V Joshi, Anshumaan Pushkar, and Priyanshu Chatterjee.</p>
+	</section>
+	
+	<section id="quote">
+		<h2>My favorite quote</h2>
+		<p>Papa kehtey the, bahar ke andhere se nahhi, ander ke andhere se daro. </p>
+	</section>
+
+	<aside>
+		<h4>Release date - October 27, 2023 (India)</h4>
+		<h4>IMDb RATING - 9.2/10</h4>
+	</aside> 
+
+	<footer>
+		<h4>Produced by: Vidhu Vinod Chopra, Yogesh Ishwar</h4>
+	</footer>
+
+	
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
