--- a/main.html
+++ b/main.html
@@ -10,15 +10,15 @@
 	<!-- the entire body must be written by student -->
 
 	<nav>
-		<a href="#actor">Actors sections</a> |   
-		<a href="#quote">Quotes sections</a> 
+		<a href="#actor" id="nav-actor">Actors sections</a> |   
+		<a href="#quote" id="nav-quote">Quotes sections</a> 
 	</nav>
-
+<hr>
 	<header>
-		<h1>12th Fail</h1>
+		<h1>Movie Name - 12th Fail</h1>
 	</header>
 	
-	<summary>Manoj prepares cheat slips for his Class 12 exams, as do all his batchmates. However, a newly transferred police officer, DSP Dushyant Singh, stops cheating in the school. As a result, all the students, including Manoj, fail the exam. Meanwhile, his father goes to challenge his suspension in the High Court.</summary>
+	<summary>Summary - Manoj prepares cheat slips for his Class 12 exams, as do all his batchmates. However, a newly transferred police officer, DSP Dushyant Singh, stops cheating in the school. As a result, all the students, including Manoj, fail the exam. Meanwhile, his father goes to challenge his suspension in the High Court.</summary>
 
 	<section id="actor">
 		<h2>About Actors</h2>
